--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -13,7 +13,6 @@
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
     "admin-lte": "~2.1.1",
-    "ember-simple-auth": "0.8.0-beta.2",
-    "font-awesome": "~4.3.0"
+    "ember-simple-auth": "0.8.0-beta.2"
   }
 }
