--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -13,6 +13,7 @@
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
     "admin-lte": "~2.1.1",
-    "ember-simple-auth": "0.8.0-beta.2"
+    "ember-simple-auth": "0.8.0-beta.2",
+    "growl": "~1.2.7"
   }
 }
