--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "bower": "^1.4.1",
     "broccoli-asset-rev": "^2.0.2",
     "ember-cli": "0.2.5",
     "ember-cli-app-version": "0.3.3",
