--- a/package.json
+++ b/package.json
@@ -1,3 +1,6 @@
 {
-  "cache_directories": ["frontend/node_modules", "frontend/bower_components"]
+  "cache_directories": [
+    "frontend/node_modules",
+    "frontend/bower_components"
+  ]
 }
