--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "ember-disable-proxy-controllers": "^0.7.0",
     "ember-export-application-global": "^1.0.2",
     "ember-idx-modal": "^0.1.4",
-    "ember-pluralize": "^0.1.0"
+    "ember-pluralize": "^0.1.0",
+    "ember-rl-dropdown": "^0.3.2"
   }
 }
