--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -14,6 +14,7 @@
     "qunit": "~1.17.1",
     "admin-lte": "~2.1.1",
     "ember-simple-auth": "0.8.0-beta.2",
-    "growl": "~1.2.7"
+    "growl": "~1.2.7",
+    "JavaScript-MD5": "~1.1.0"
   }
 }
