--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "ember-cli-rails-addon": "0.0.11",
     "ember-cli-simple-auth": "^0.8.0-beta.2",
     "ember-cli-simple-auth-devise": "^0.8.0-beta.2",
+    "ember-cli-stripe": "^0.3.0",
     "ember-cli-uglify": "^1.0.1",
     "ember-data": "1.0.0-beta.17",
     "ember-disable-proxy-controllers": "^0.7.0",
