--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -15,6 +15,7 @@
     "admin-lte": "~2.1.1",
     "ember-simple-auth": "0.8.0-beta.2",
     "growl": "~1.2.7",
-    "JavaScript-MD5": "~1.1.0"
+    "JavaScript-MD5": "~1.1.0",
+    "ember-pusher": "0.1.1"
   }
 }
