--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-pagination": "^0.6.6",
+    "ember-cli-pusher": "^0.1.2",
     "ember-cli-qunit": "0.3.13",
     "ember-cli-rails-addon": "0.0.11",
     "ember-cli-simple-auth": "^0.8.0-beta.2",
