--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -17,5 +17,8 @@
     "growl": "~1.2.7",
     "JavaScript-MD5": "~1.1.0",
     "ember-pusher": "0.1.1"
+  },
+  "devDependencies": {
+    "moment": "~2.10.3"
   }
 }
