--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,5 +46,8 @@
     "ember-idx-modal": "^0.1.4",
     "ember-pluralize": "^0.1.0",
     "ember-rl-dropdown": "^0.3.2"
+  },
+  "dependencies": {
+    "ember-radio-buttons": "^4.0.1"
   }
 }
