underscore lodash methods

--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -17,7 +17,8 @@
     "growl": "~1.2.7",
     "JavaScript-MD5": "~1.1.0",
     "ember-pusher": "0.1.1",
-    "ember-c3": "~0.1.4"
+    "ember-c3": "~0.1.4",
+    "lodash": "^2.4.0"
   },
   "devDependencies": {
     "moment": "~2.10.3"
