--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-lodash": "^1.0.1",
     "ember-cli-pagination": "^0.6.6",
     "ember-cli-pusher": "^0.1.2",
     "ember-cli-qunit": "0.3.13",
