--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,7 @@
     "ember-cli-simple-auth-devise": "^0.8.0-beta.2",
     "ember-cli-stripe": "^0.3.0",
     "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.0.0-beta.17",
+    "ember-data": "^1.13.10",
     "ember-disable-proxy-controllers": "^0.7.0",
     "ember-export-application-global": "^1.0.2",
     "ember-idx-accordion": "^0.1.1",
