--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "dependencies": {
-    "ember": "1.12.1",
+    "ember": "1.13.11",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
     "ember-data": "^1.13.10",
@@ -17,9 +17,11 @@
     "growl": "~1.2.7",
     "JavaScript-MD5": "~1.1.0",
     "ember-c3": "~0.1.4",
-    "lodash": "^2.4.0"
+    "lodash": "^2.4.0",
+    "font-awesome": "~4.4.0"
   },
   "devDependencies": {
-    "moment": "~2.10.3"
+    "moment": "~2.10.3",
+    "ember": "1.13.11"
   }
 }
