--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
   },
   "repository": "git://github.com/arinhouck/gradebuildr.git",
   "engines": {
-    "node": "0.12.1"
+    "node": "0.12.7",
+    "npm": "2.12.1"
   },
   "author": "Arin Houck",
   "license": "MIT",
