--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "bower": "^1.4.1",
     "broccoli-asset-rev": "^2.0.2",
+    "ember-ajax": "0.7.1",
     "ember-cli": "0.2.5",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-babel": "^5.0.0",
@@ -31,7 +32,6 @@
     "ember-cli-font-awesome": "1.4.0-beta.1",
     "ember-cli-gravatar": "3.0.2",
     "ember-cli-htmlbars": "0.7.6",
-    "ember-cli-ic-ajax": "0.1.4",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-lodash": "^1.0.1",
     "ember-cli-pagination": "^0.6.6",
