--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,19 +24,19 @@
     "bower": "^1.4.1",
     "broccoli-asset-rev": "^2.0.2",
     "ember-ajax": "0.7.1",
-    "ember-cli": "0.2.5",
+    "ember-cli": "^1.13.13",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-babel": "^5.0.0",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
-    "ember-cli-font-awesome": "1.4.0-beta.1",
+    "ember-cli-font-awesome": "0.0.9",
     "ember-cli-gravatar": "3.0.2",
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-lodash": "^1.0.1",
     "ember-cli-pagination": "^0.6.6",
     "ember-cli-qunit": "0.3.13",
-    "ember-cli-rails-addon": "0.0.11",
+    "ember-cli-rails-addon": "~> 0.5.0",
     "ember-cli-simple-auth": "^0.8.0-beta.2",
     "ember-cli-simple-auth-devise": "^0.8.0-beta.2",
     "ember-cli-stripe": "^0.3.0",
