--- a/package.json
+++ b/package.json
@@ -5,9 +5,5 @@
   "devDependencies": {
     "bower": "*"
   },
-  "cacheDirectories": [
-    "frontend/node_modules",
-    "frontend/bower_components",
-    "node_modules"
-  ]
+  "cacheDirectories": []
 }
